# scsnv

./: README.md  pyproject.toml
scsnv/: _core.py  _vcf_header_parser.py  reader.py
tests/: test_reader.py  test_scsnv.py
tests/data/: test.vcf
