[tool.poetry]
name = "scsnv"
version = "0.1.0"
description = ""
authors = ["illumination-k <illumination.k.27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
anndata = "^0.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
